# ShExML2RML

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: deploy.yml
outputs/: iterators_single_expression_expected.ttl  iterators_single_expression_nested_expected.ttl  shexml2rml.ttl  single_iterator_single_expression.shexml
resources/: invalid_prefix.shexml  invalid_source.shexml  test.shexml  valid_expressions.shexml  valid_iterators.shexml  valid_matcher.shexml  valid_prefix.shexml  valid_shapes.shexml  valid_source.shexml
resources/integration/: iterators_single_expression.shexml  iterators_single_expression_nested.shexml  output.ttl  single_iterator_single_expression.shexml
src/: lib.rs  main.rs
src/api/: runner.rs
src/cli/: args.rs  commands.rs  mod.rs  runner.rs
src/core/: core.rs
src/parser/: ast.rs  grammar.pest  mod.rs  shexml.rs  shexml.rustemo  shexml_actions.rs  syntax.rs
src/serializer/: abstract_visitor.rs  mod.rs  rml_ast.rs
src/serializer/rml_classes/: logical_source.rs  mod.rs  namespace_prefix.rs  object_map.rs  predicate_map.rs  predicate_object_map.rs  reference_formulation.rs  rml_node.rs  subject_map.rs  term_type.rs  triples_map.rs  triples_name.rs
src/serializer/visitor/: abstract_visitor.rs  mod.rs  transpile_visitor.rs
tests/: integration_test.rs  test_parser.rs  test_serializer.rs
tests/unit_tests/: mod.rs  parser_test.rs  serializer_test.rs
webapp/: README.md  index.html  package-lock.json  package.json
webapp/src/: App.tsx  index.css
(+15 files in other folders)
