[package]
name = "shexml2rml"
version = "0.1.0"
edition = "2021"

[dependencies]
rustemo = "0.7.0"
indoc = "2.0.5"
once_cell = "1.20.2"
clap = { version = "4", features = ["derive"] }
actix-web = "4"
async-std = "1.13.1"

[dev-dependencies]
rustemo-compiler = "0.7.0"

[build-dependencies]
rustemo-compiler = "0.7.0"
