[package]
name = "shexml2rml"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-performance Rust-based transpiler that converts ShExML to RML"
homepage = "https://github.com/CANCI0/shexml2rml"
repository = "https://github.com/CANCI0/shexml2rml"
keywords = ["shexml", "rml", "rdf", "transpiler", "semantic-web"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
rustemo = "0.7.0"
indoc = "2.0.5"
once_cell = "1.20.2"
clap = { version = "4", features = ["derive"] }
actix-web = "4"
actix-cors = "0.7.1"

[dev-dependencies]
rustemo-compiler = "0.7.0"

[build-dependencies]
rustemo-compiler = "0.7.0"
